@@ -932,6 +932,68 @@ class CodimensionMainWindow( QMainWindow ):
                                         PixmapCache().getIcon( 'zoomreset.png' ),
                                         'Zoom r&eset', self.__onZoomReset )
 
+        # Options menu
+        self.__optionsMenu = QMenu( "&Options", self )
+        verticalEdgeAct = self.__optionsMenu.addAction( 'Show vertical edge' )
+        verticalEdgeAct.setCheckable( True )
+        verticalEdgeAct.setChecked( self.settings.verticalEdge )
+        self.connect( verticalEdgeAct, SIGNAL( 'changed()' ), self.__verticalEdgeChanged )
+        showSpacesAct = self.__optionsMenu.addAction( 'Show whitespaces' )
+        showSpacesAct.setCheckable( True )
+        showSpacesAct.setChecked( self.settings.showSpaces )
+        self.connect( showSpacesAct, SIGNAL( 'changed()' ), self.__showSpacesChanged )
+        lineWrapAct = self.__optionsMenu.addAction( 'Wrap long lines' )
+        lineWrapAct.setCheckable( True )
+        lineWrapAct.setChecked( self.settings.lineWrap )
+        self.connect( lineWrapAct, SIGNAL( 'changed()' ), self.__lineWrapChanged )
+        showEOLAct = self.__optionsMenu.addAction( 'Show EOL' )
+        showEOLAct.setCheckable( True )
+        showEOLAct.setChecked( self.settings.showEOL )
+        self.connect( showEOLAct, SIGNAL( 'changed()' ), self.__showEOLChanged )
+        showBraceMatchAct = self.__optionsMenu.addAction( 'Show brace matching' )
+        showBraceMatchAct.setCheckable( True )
+        showBraceMatchAct.setChecked( self.settings.showBraceMatch )
+        self.connect( showBraceMatchAct, SIGNAL( 'changed()' ), self.__showBraceMatchChanged )
+        autoIndentAct = self.__optionsMenu.addAction( 'Auto indent' )
+        autoIndentAct.setCheckable( True )
+        autoIndentAct.setChecked( self.settings.autoIndent )
+        self.connect( autoIndentAct, SIGNAL( 'changed()' ), self.__autoIndentChanged )
+        backspaceUnindentAct = self.__optionsMenu.addAction( 'Backspace unindent' )
+        backspaceUnindentAct.setCheckable( True )
+        backspaceUnindentAct.setChecked( self.settings.backspaceUnindent )
+        self.connect( backspaceUnindentAct, SIGNAL( 'changed()' ), self.__backspaceUnindentChanged )
+        tabIndentsAct = self.__optionsMenu.addAction( 'TAB indents' )
+        tabIndentsAct.setCheckable( True )
+        tabIndentsAct.setChecked( self.settings.tabIndents )
+        self.connect( tabIndentsAct, SIGNAL( 'changed()' ), self.__tabIndentsChanged )
+        indentationGuidesAct = self.__optionsMenu.addAction( 'Show indentation guides' )
+        indentationGuidesAct.setCheckable( True )
+        indentationGuidesAct.setChecked( self.settings.indentationGuides )
+        self.connect( indentationGuidesAct, SIGNAL( 'changed()' ), self.__indentationGuidesChanged )
+        currentLineVisibleAct = self.__optionsMenu.addAction( 'Highlight current line' )
+        currentLineVisibleAct.setCheckable( True )
+        currentLineVisibleAct.setChecked( self.settings.currentLineVisible )
+        self.connect( currentLineVisibleAct, SIGNAL( 'changed()' ), self.__currentLineVisibleChanged )
+        jumpToFirstNonSpaceAct = self.__optionsMenu.addAction( 'HOME to first non-space' )
+        jumpToFirstNonSpaceAct.setCheckable( True )
+        jumpToFirstNonSpaceAct.setChecked( self.settings.jumpToFirstNonSpace )
+        self.connect( jumpToFirstNonSpaceAct, SIGNAL( 'changed()' ), self.__homeToFirstNonSpaceChanged )
+        removeTrailingOnSpaceAct = self.__optionsMenu.addAction( 'Auto remove trailing spaces on save' )
+        removeTrailingOnSpaceAct.setCheckable( True )
+        removeTrailingOnSpaceAct.setChecked( self.settings.removeTrailingOnSave )
+        self.connect( removeTrailingOnSpaceAct, SIGNAL( 'changed()' ), self.__removeTrailingChanged )
+        self.__optionsMenu.addSeparator()
+        themesMenu = self.__optionsMenu.addMenu( "Themes" )
+        availableThemes = self.__buildThemesList()
+        for theme in availableThemes:
+            themeAct = themesMenu.addAction( theme[ 1 ] )
+            themeAct.setData( QVariant( theme[ 0 ] ) )
+            if theme[ 0 ] == Settings().skinName:
+                font = themeAct.font()
+                font.setBold( True )
+                themeAct.setFont( font )
+        self.connect( themesMenu, SIGNAL( "triggered(QAction*)" ), self.__onTheme )
+
         # The Help menu
         self.__helpMenu = QMenu( "&Help", self )
         self.connect( self.__helpMenu, SIGNAL( "aboutToShow()" ),
@@ -964,6 +1026,7 @@ class CodimensionMainWindow( QMainWindow ):
         menuBar.addMenu( self.__toolsMenu )
         menuBar.addMenu( self.__diagramsMenu )
         menuBar.addMenu( self.__viewMenu )
+        menuBar.addMenu( self.__optionsMenu )
         menuBar.addMenu( self.__helpMenu )
         return
 
@@ -1128,75 +1191,6 @@ class CodimensionMainWindow( QMainWindow ):
         self.connect( self.__findFileButton, SIGNAL( 'triggered()' ),
                       self.findFileClicked )
 
-        # Editor settings button
-        editorSettingsMenu = QMenu( self )
-        verticalEdgeAct = editorSettingsMenu.addAction( 'Show vertical edge' )
-        verticalEdgeAct.setCheckable( True )
-        verticalEdgeAct.setChecked( self.settings.verticalEdge )
-        self.connect( verticalEdgeAct, SIGNAL( 'changed()' ), self.__verticalEdgeChanged )
-        showSpacesAct = editorSettingsMenu.addAction( 'Show whitespaces' )
-        showSpacesAct.setCheckable( True )
-        showSpacesAct.setChecked( self.settings.showSpaces )
-        self.connect( showSpacesAct, SIGNAL( 'changed()' ), self.__showSpacesChanged )
-        lineWrapAct = editorSettingsMenu.addAction( 'Wrap long lines' )
-        lineWrapAct.setCheckable( True )
-        lineWrapAct.setChecked( self.settings.lineWrap )
-        self.connect( lineWrapAct, SIGNAL( 'changed()' ), self.__lineWrapChanged )
-        showEOLAct = editorSettingsMenu.addAction( 'Show EOL' )
-        showEOLAct.setCheckable( True )
-        showEOLAct.setChecked( self.settings.showEOL )
-        self.connect( showEOLAct, SIGNAL( 'changed()' ), self.__showEOLChanged )
-        showBraceMatchAct = editorSettingsMenu.addAction( 'Show brace matching' )
-        showBraceMatchAct.setCheckable( True )
-        showBraceMatchAct.setChecked( self.settings.showBraceMatch )
-        self.connect( showBraceMatchAct, SIGNAL( 'changed()' ), self.__showBraceMatchChanged )
-        autoIndentAct = editorSettingsMenu.addAction( 'Auto indent' )
-        autoIndentAct.setCheckable( True )
-        autoIndentAct.setChecked( self.settings.autoIndent )
-        self.connect( autoIndentAct, SIGNAL( 'changed()' ), self.__autoIndentChanged )
-        backspaceUnindentAct = editorSettingsMenu.addAction( 'Backspace unindent' )
-        backspaceUnindentAct.setCheckable( True )
-        backspaceUnindentAct.setChecked( self.settings.backspaceUnindent )
-        self.connect( backspaceUnindentAct, SIGNAL( 'changed()' ), self.__backspaceUnindentChanged )
-        tabIndentsAct = editorSettingsMenu.addAction( 'TAB indents' )
-        tabIndentsAct.setCheckable( True )
-        tabIndentsAct.setChecked( self.settings.tabIndents )
-        self.connect( tabIndentsAct, SIGNAL( 'changed()' ), self.__tabIndentsChanged )
-        indentationGuidesAct = editorSettingsMenu.addAction( 'Show indentation guides' )
-        indentationGuidesAct.setCheckable( True )
-        indentationGuidesAct.setChecked( self.settings.indentationGuides )
-        self.connect( indentationGuidesAct, SIGNAL( 'changed()' ), self.__indentationGuidesChanged )
-        currentLineVisibleAct = editorSettingsMenu.addAction( 'Highlight current line' )
-        currentLineVisibleAct.setCheckable( True )
-        currentLineVisibleAct.setChecked( self.settings.currentLineVisible )
-        self.connect( currentLineVisibleAct, SIGNAL( 'changed()' ), self.__currentLineVisibleChanged )
-        jumpToFirstNonSpaceAct = editorSettingsMenu.addAction( 'HOME to first non-space' )
-        jumpToFirstNonSpaceAct.setCheckable( True )
-        jumpToFirstNonSpaceAct.setChecked( self.settings.jumpToFirstNonSpace )
-        self.connect( jumpToFirstNonSpaceAct, SIGNAL( 'changed()' ), self.__homeToFirstNonSpaceChanged )
-        removeTrailingOnSpaceAct = editorSettingsMenu.addAction( 'Auto remove trailing spaces on save' )
-        removeTrailingOnSpaceAct.setCheckable( True )
-        removeTrailingOnSpaceAct.setChecked( self.settings.removeTrailingOnSave )
-        self.connect( removeTrailingOnSpaceAct, SIGNAL( 'changed()' ), self.__removeTrailingChanged )
-        editorSettingsMenu.addSeparator()
-        themesMenu = editorSettingsMenu.addMenu( "Themes" )
-        availableThemes = self.__buildThemesList()
-        for theme in availableThemes:
-            themeAct = themesMenu.addAction( theme[ 1 ] )
-            themeAct.setData( QVariant( theme[ 0 ] ) )
-            if theme[ 0 ] == Settings().skinName:
-                font = themeAct.font()
-                font.setBold( True )
-                themeAct.setFont( font )
-        self.connect( themesMenu, SIGNAL( "triggered(QAction*)" ), self.__onTheme )
-
-        editorSettingsButton = QToolButton( self )
-        editorSettingsButton.setIcon( PixmapCache().getIcon( 'editorsettings.png' ) )
-        editorSettingsButton.setToolTip( 'Text editor settings' )
-        editorSettingsButton.setPopupMode( QToolButton.InstantPopup  )
-        editorSettingsButton.setMenu( editorSettingsMenu )
-        editorSettingsButton.setFocusPolicy( Qt.NoFocus )
-
         # Debugger buttons
         self.__dbgBreak = QAction( PixmapCache().getIcon( 'dbgbreak.png' ),
                                    'Break', self )
@@ -1281,7 +1275,6 @@ class CodimensionMainWindow( QMainWindow ):
         toolbar.addWidget( spacer )
         toolbar.addSeparator()
         toolbar.addWidget( self.__templateButton )
-        toolbar.addWidget( editorSettingsButton )
 
         self.addToolBar( toolbar )
         return
